--- a/ComputerWebAPI/appsettings.json
+++ b/ComputerWebAPI/appsettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ComputerDB": "Server=FLETCHZENBOOKUX\\SQLEXPRESS;Database=ComputerDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=FLETCHZENBOOKUX\\SQLEXPRESS;Database=ComputerApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ComputerApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
