--- a/ComputerUI/ComputerUI.csproj
+++ b/ComputerUI/ComputerUI.csproj
@@ -29,10 +29,12 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\computer-management\computer-management.module.ts" />
+    <None Remove="ClientApp\src\app\computer-management\message.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\computer-management\computer-management.module.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\computer-management\message.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
