--- a/ComputerLibrary/ComputerLibrary.csproj
+++ b/ComputerLibrary/ComputerLibrary.csproj
@@ -8,4 +8,9 @@
     <Folder Include="Common\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
+  </ItemGroup>
+
 </Project>
