--- a/ComputerUI/ComputerUI.csproj
+++ b/ComputerUI/ComputerUI.csproj
@@ -34,7 +34,7 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\computer-management\computer-management.module.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\computer-management\message.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\messages\message.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
