--- a/ComputerWebAPI/appsettings.json
+++ b/ComputerWebAPI/appsettings.json
@@ -6,13 +6,15 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Trace",
+        "Microsoft": "Information"
       }
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Trace",
+        "Microsoft": "Information"
+      }
       }
     }
-  }
 }
