--- a/ComputerWebAPI/ComputerWebAPI.csproj
+++ b/ComputerWebAPI/ComputerWebAPI.csproj
@@ -13,8 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="NLog" Version="4.5.1" />
+    <PackageReference Include="NLog.Slack" Version="1.0.2" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.3.0" />
   </ItemGroup>
 
@@ -26,6 +28,12 @@
   <ItemGroup>
     <ProjectReference Include="..\ComputerDAL\ComputerDAL.csproj" />
     <ProjectReference Include="..\ComputerLibrary\ComputerLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
