--- a/ComputerWebAPI/nlog.config
+++ b/ComputerWebAPI/nlog.config
@@ -5,9 +5,14 @@
       internalLogLevel="info"
       internalLogFile="c:\temp\internal-nlog.txt">
 
+  <!-- enable asp.net core layout renderers -->
+  <extensions>
+    <add assembly="NLog.Web.AspNetCore"/>
+    <add assembly="NLog.Slack" />
+  </extensions>
 
   <!-- the targets to write to -->
-  <targets>
+  <targets async="true">
     <!-- write logs to file  -->
     <target xsi:type="File" name="allfile" fileName="c:\temp\nlog-all-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
@@ -15,6 +20,16 @@
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
     <target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-own-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+    
+    <target xsi:type="Slack"
+            name="slackTarget"
+            layout="${logger}|${message}"
+            webHookUrl="https://hooks.slack.com/services/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"
+            channel="#log"
+            username="NLog.Slack"
+            compact="false"
+            icon=":ghost:" />
+    
   </targets>
 
   <!-- rules to map from logger name to target -->
@@ -23,8 +38,9 @@
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
     <!--Skip non-critical Microsoft logs and so log only own logs-->
-    <logger name="Microsoft.*" maxLevel="Info" final="true" />
-    <!-- BlackHole without writeTo -->
+    <logger name="Microsoft.*" maxLevel="Info" final="true" /> <!-- BlackHole without writeTo -->
     <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
+
+    <logger name="*" minlevel="Debug" writeTo="slackTarget" />
   </rules>
 </nlog>
