--- a/ComputerUI/ComputerUI.csproj
+++ b/ComputerUI/ComputerUI.csproj
@@ -30,10 +30,12 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\computer-management\computer-management.module.ts" />
     <None Remove="ClientApp\src\app\computer-management\message.ts" />
+    <None Remove="ClientApp\src\app\globals.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\computer-management\computer-management.module.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\globals.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\messages\message.ts" />
   </ItemGroup>
 
